@@ -4,6 +4,13 @@
 
  Changes between 0.9.8e and 0.9.8f-fips  [xx XXX xxxx]
 
+  *) New flag in EVP_CIPHER: EVP_CIPH_FLAG_DEFAULT_ASN1. This will
+     automatically use EVP_CIPHER_{get,set}_asn1_iv and avoid the
+     need for any ASN1 dependencies in FIPS library. Move AES cipher
+     definitions to fips library and modify AES algorithm test to use
+     EVP.
+     [Steve Henson]
+
   *) Move EVP cipher code into enc_min.c to support a minimal implementation
      for use by FIPS applications.
      [Steve Henson]
